fix for fdo#62111 - don't count non-default empty rows as rows to repeat

Change-Id: I075310ef63ab4eb666da2092d4be1c6f8d989b75
Reviewed-on: https://gerrit.libreoffice.org/2681
Reviewed-by: Fridrich Strba <fridrich@documentfoundation.org>
Tested-by: Fridrich Strba <fridrich@documentfoundation.org>
(cherry picked from commit 6d2a17be89e98c6a7d8c172832c9491ce6c50506)
Reviewed-on: https://gerrit.libreoffice.org/2700
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
Reviewed-by: Petr Mladek <pmladek@suse.cz>
Tested-by: Petr Mladek <pmladek@suse.cz>